--- a/styles.css
+++ b/styles.css
@@ -644,6 +644,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.resize {
+  resize: both;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -1008,6 +1012,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 :root{
   font-family: sans-serif;
   font-size: 14px;
+}
+
+body{
+  overflow: hidden;
 }
 
 @-webkit-keyframes logo-anim {
